--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Packets\Writer.cs" />
     <Compile Include="Packets\Handlers\PacketHandler.cs" />
     <Compile Include="Packets\Handlers\KeyExchange.cs" />
+    <Compile Include="Packets\Handlers\Login.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
