--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -13,21 +13,23 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
+    <OutputPath>E:\Sega\PHANTASYSTARONLINE2\pso2_bin</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
     <PlatformTarget>x86</PlatformTarget>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>full</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
+    <OutputPath>E:\Sega\PHANTASYSTARONLINE2\pso2_bin</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
     <PlatformTarget>x86</PlatformTarget>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -45,11 +47,13 @@
     <Compile Include="Packets\Handlers\PacketHandler.cs" />
     <Compile Include="Packets\Handlers\KeyExchange.cs" />
     <Compile Include="Packets\Handlers\Login.cs" />
+    <Compile Include="Models\Character.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Network\" />
     <Folder Include="Packets\" />
     <Folder Include="Packets\Handlers\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
