--- a/PolarisServer/packages.config
+++ b/PolarisServer/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net40" />
+  <package id="MySql.Data" version="6.9.5" targetFramework="net40" />
 </packages>
