--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System.Data.SQLite.EF6">
       <HintPath>..\packages\System.Data.SQLite.EF6.1.0.94.0\lib\net40\System.Data.SQLite.EF6.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data">
+      <HintPath>..\packages\MySql.Data.6.9.5\lib\net40\MySql.Data.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logger.cs" />
@@ -70,8 +73,7 @@
     <Compile Include="QueryServer.cs" />
     <Compile Include="Models\ShipData.cs" />
     <Compile Include="Packets\Handlers\ClientDebug.cs" />
-    <Compile Include="Resource\Resource.cs" />
-    <Compile Include="Resource\ResourceManager.cs" />
+    <Compile Include="Database\PolarisDB.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
@@ -80,7 +82,7 @@
     <Folder Include="Packets\" />
     <Folder Include="Packets\Handlers\" />
     <Folder Include="Models\" />
-    <Folder Include="Resource\" />
+    <Folder Include="Database\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
