--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -66,6 +66,9 @@
     <Compile Include="Models\ShipData.cs" />
     <Compile Include="Packets\Handlers\ClientDebug.cs" />
     <Compile Include="Database\PolarisDB.cs" />
+    <Compile Include="Database\DBCharacter.cs" />
+    <Compile Include="Database\DBPlayer.cs" />
+    <Compile Include="Database\DBObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
