--- a/PolarisServer/packages.config
+++ b/PolarisServer/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net40" />
   <package id="MySql.Data" version="6.9.5" targetFramework="net40" />
-  <package id="MySql.Data.Entities" version="6.8.3.0" targetFramework="net40" />
+  <package id="MySql.Data.Entity" version="6.9.5" targetFramework="net40" />
 </packages>
