--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -33,7 +33,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Mono.Security" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="MySql.Data">
@@ -70,6 +69,9 @@
     <Compile Include="Packets\Handlers\ClientDebug.cs" />
     <Compile Include="Database\PolarisDB.cs" />
     <Compile Include="Database\PolarisEF.cs" />
+    <Compile Include="Crypto\RC4.cs" />
+    <Compile Include="Crypto\ARC4Managed.cs" />
+    <Compile Include="Helper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
@@ -79,6 +81,7 @@
     <Folder Include="Packets\Handlers\" />
     <Folder Include="Models\" />
     <Folder Include="Database\" />
+    <Folder Include="Crypto\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
