--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Crypto\ARC4Managed.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="Packets\PacketReader.cs" />
+    <Compile Include="Packets\Handlers\CharacterCreate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
