--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Packets\Handlers\CharacterCreate.cs" />
     <Compile Include="Packets\Handlers\CharacterList.cs" />
     <Compile Include="Packets\Packet.cs" />
+    <Compile Include="Packets\Packets\SystemMessagePacket.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
@@ -88,6 +89,7 @@
     <Folder Include="Models\" />
     <Folder Include="Database\" />
     <Folder Include="Crypto\" />
+    <Folder Include="Packets\Packets\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
