--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Packets\Handlers\CharacterList.cs" />
     <Compile Include="Packets\Packet.cs" />
     <Compile Include="Packets\Packets\SystemMessagePacket.cs" />
+    <Compile Include="Packets\Handlers\StartGame.cs" />
+    <Compile Include="Packets\Packets\NoPayloadPacket.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
