--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -82,6 +82,8 @@
     <Compile Include="Packets\Handlers\StartGame.cs" />
     <Compile Include="Packets\Packets\NoPayloadPacket.cs" />
     <Compile Include="Packets\Packets\CharacterSpawnPacket.cs" />
+    <Compile Include="Packets\Handlers\MovementHandlers.cs" />
+    <Compile Include="Packets\Handlers\ChatHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
