--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -7,7 +7,6 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>PolarisServer</RootNamespace>
     <AssemblyName>PolarisServer</AssemblyName>
-    <UseMSBuildEngine>False</UseMSBuildEngine>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -51,6 +50,9 @@
     <Reference Include="BCrypt.Net">
       <HintPath>..\packages\BCrypt-Official.0.1.109\lib\BCrypt.Net.dll</HintPath>
     </Reference>
+    <Reference Include="ILRepack">
+      <HintPath>..\packages\ILRepack.Lib.1.25.0\lib\ILRepack.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleSystem.cs" />
@@ -88,6 +90,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
+  <Import Project="..\packages\ILRepackTask.1.0.8\build\net40\ILRepackTask.targets" Condition="Exists('..\packages\ILRepackTask.1.0.8\build\net40\ILRepackTask.targets')" />
   <ItemGroup />
   <ProjectExtensions>
     <MonoDevelop>
