GuildInfo packet and handler, probably not 100% accurate but good enough for now

--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ConsoleSystem.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Packets\Handlers\CharacterSpawn.cs" />
+    <Compile Include="Packets\Packets\GuildInfoPacket.cs" />
     <Compile Include="Packets\Packets\PalettePacket.cs" />
     <Compile Include="Packets\Packets\SetCurrencyPacket.cs" />
     <Compile Include="Packets\Packets\SetMesetaPacket.cs" />
