--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -90,6 +90,8 @@
     <Compile Include="Packets\Packets\CharacterSpawnPacket.cs" />
     <Compile Include="Packets\Handlers\MovementHandlers.cs" />
     <Compile Include="Packets\Handlers\ChatHandler.cs" />
+    <Compile Include="Zone\Zone.cs" />
+    <Compile Include="Zone\ZoneManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
@@ -108,5 +110,8 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Zone\" />
   </ItemGroup>
 </Project>
