--- a/PolarisServer/app.config
+++ b/PolarisServer/app.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-  </configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    </configSections>
+  
   <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
