--- a/PolarisTests/PolarisTests.csproj
+++ b/PolarisTests/PolarisTests.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>PolarisTests</RootNamespace>
     <AssemblyName>PolarisTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>0.1.0-pre</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
