--- a/PolarisServer/packages.config
+++ b/PolarisServer/packages.config
@@ -4,4 +4,5 @@
   <package id="EntityFramework" version="6.1.2" targetFramework="net40" />
   <package id="MySql.Data" version="6.9.5" targetFramework="net40" />
   <package id="MySql.Data.Entity" version="6.9.5" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
 </packages>
