--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -33,6 +33,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -57,6 +61,8 @@
     <Compile Include="Config.cs" />
     <Compile Include="ConsoleSystem.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="Models\PSOData.cs" />
+    <Compile Include="Models\PSOObject.cs" />
     <Compile Include="Packets\Handlers\CharacterSpawn.cs" />
     <Compile Include="Packets\Packets\GuildInfoPacket.cs" />
     <Compile Include="Packets\Packets\PalettePacket.cs" />
@@ -97,7 +103,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
       <Properties>
@@ -112,13 +120,10 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="app.config" />
-    <CopyItems Include="Resources\**\*" Exclude="Resources\.git"/>
+    <CopyItems Include="Resources\**\*" Exclude="Resources\.git" />
   </ItemGroup>
   <Target Name="CopyFiles">
     <Copy SourceFiles="@(CopyItems)" DestinationFolder="$(OutputPath)\\Resources\\%(CopyItems.RecursiveDir)" />
   </Target>
-  <ItemGroup>
-    <Folder Include="Zone\" />
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
