--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -64,10 +64,10 @@
     <Compile Include="Models\PSOData.cs" />
     <Compile Include="Models\PSOObject.cs" />
     <Compile Include="Packets\Handlers\CharacterSpawn.cs" />
-    <Compile Include="Packets\Packets\GuildInfoPacket.cs" />
-    <Compile Include="Packets\Packets\PalettePacket.cs" />
-    <Compile Include="Packets\Packets\SetCurrencyPacket.cs" />
-    <Compile Include="Packets\Packets\SetMesetaPacket.cs" />
+    <Compile Include="Packets\PSOPackets\GuildInfoPacket.cs" />
+    <Compile Include="Packets\PSOPackets\PalettePacket.cs" />
+    <Compile Include="Packets\PSOPackets\SetCurrencyPacket.cs" />
+    <Compile Include="Packets\PSOPackets\SetMesetaPacket.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Client.cs" />
@@ -92,10 +92,10 @@
     <Compile Include="Packets\Handlers\CharacterCreate.cs" />
     <Compile Include="Packets\Handlers\CharacterList.cs" />
     <Compile Include="Packets\Packet.cs" />
-    <Compile Include="Packets\Packets\SystemMessagePacket.cs" />
+    <Compile Include="Packets\PSOPackets\SystemMessagePacket.cs" />
     <Compile Include="Packets\Handlers\StartGame.cs" />
-    <Compile Include="Packets\Packets\NoPayloadPacket.cs" />
-    <Compile Include="Packets\Packets\CharacterSpawnPacket.cs" />
+    <Compile Include="Packets\PSOPackets\NoPayloadPacket.cs" />
+    <Compile Include="Packets\PSOPackets\CharacterSpawnPacket.cs" />
     <Compile Include="Packets\Handlers\MovementHandlers.cs" />
     <Compile Include="Packets\Handlers\ChatHandler.cs" />
     <Compile Include="Zone\Zone.cs" />
@@ -103,9 +103,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <ProjectExtensions>
     <MonoDevelop>
       <Properties>
