--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -129,6 +129,7 @@
   </Target>
   <ItemGroup />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /S /Y "$(ProjectDir)Resources" "$(TargetDir)Resources\"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
