Make ObjectHeader's ID uint again. This seems to be actually correct, the 4 bytes after seem to just be padding to keep the struct 4 byte aligned in PSO2.

--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Packets\Handlers\CharacterSpawn.cs" />
     <Compile Include="Packets\Handlers\ObjectInteract.cs" />
     <Compile Include="Packets\Handlers\ReturnToLobbyHandler.cs" />
+    <Compile Include="Packets\Handlers\SymbolArtHandler.cs" />
     <Compile Include="Packets\PSOPackets\GuildInfoPacket.cs" />
     <Compile Include="Packets\PSOPackets\MovementPacket.cs" />
     <Compile Include="Packets\PSOPackets\ObjectActionPacket.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Packets\PSOPackets\SetCurrencyPacket.cs" />
     <Compile Include="Packets\PSOPackets\SetMesetaPacket.cs" />
     <Compile Include="Packets\PSOPackets\SetScenePacket.cs" />
+    <Compile Include="Packets\PSOPackets\SymbolArtList.cs" />
     <Compile Include="Packets\PSOPackets\TeleportTransferPacket.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
