--- a/PolarisServer/PolarisServer.csproj
+++ b/PolarisServer/PolarisServer.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Packets\PSOPackets\MovementPacket.cs" />
     <Compile Include="Packets\PSOPackets\ObjectActionPacket.cs" />
     <Compile Include="Packets\PSOPackets\PalettePacket.cs" />
+    <Compile Include="Packets\PSOPackets\PartyInitPacket.cs" />
     <Compile Include="Packets\PSOPackets\QuestDifficultyPacket.cs" />
     <Compile Include="Packets\PSOPackets\QuestAvailablePacket.cs" />
     <Compile Include="Packets\PSOPackets\QuestListPacket.cs" />
